# OpenFace

./: CMakeLists.txt
exe/FaceLandmarkImg/: FaceLandmarkImg.cpp
exe/FaceLandmarkVid/: FaceLandmarkVid.cpp
exe/FaceLandmarkVidMulti/: FaceLandmarkVidMulti.cpp
exe/FeatureExtraction/: FeatureExtraction.cpp
exe/Recording/: Record.cpp
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/FaceAnalyser/include/OpenFace/FaceAnalyser/: FaceAnalyser.h  FaceAnalyserParameters.h  Face_utils.h
lib/local/FaceAnalyser/src/: FaceAnalyser.cpp  FaceAnalyserParameters.cpp  Face_utils.cpp  PAW.cpp  PDM.cpp  SVM_dynamic_lin.cpp  SVM_static_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_static_lin_regressors.cpp
lib/local/GazeAnalyser/: CMakeLists.txt
lib/local/GazeAnalyser/include/OpenFace/GazeAnalyser/: GazeEstimation.h
lib/local/GazeAnalyser/src/: GazeEstimation.cpp
lib/local/LandmarkDetector/: CMakeLists.txt
lib/local/LandmarkDetector/include/OpenFace/LandmarkDetector/: LandmarkCoreIncludes.h  LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  LandmarkDetectorUtils.h  PDM.h  Patch_experts.h  stdafx.h
lib/local/LandmarkDetector/src/: CCNF_patch_expert.cpp  LandmarkDetectionValidator.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVR_patch_expert.cpp  stdafx.cpp
